# mlops-demo

./: .dockerignore  .env.example  .gitignore  .kubeignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
configs/: mlflow_config.yaml
k8s/: 02-configmap.yml  03-prometheus-deployment.yml  04-grafana-deployment.yml  05-mlflow-deployment.yml  06-prefect-deployment.yml  07-api-deployment.yml  08-locust-deployment.yml  DEPLOYMENT-GUIDE.md
src/models/: train.py
