[project]
name = "mlops-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "mlflow>=3.8.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "prefect>=3.6.10",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]
